--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "clean-css": "^3.4.20",
     "grunt": "^1.0.1",
     "grunt-autoprefixer": "^3.0.4",
+    "grunt-cli": "^1.2.0",
     "grunt-combine-mq": "^0.9.0",
     "grunt-concurrent": "^2.3.1",
     "grunt-contrib-clean": "^1.0.0",
