install bootstrap and enable bootsrap flexbox grid. yeah!

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "fullname": "Maker",
   "version": "0.3.0",
   "devDependencies": {
+    "bootstrap": "^4.0.0-alpha.5",
     "clean-css": "^3.4.20",
     "grunt": "^1.0.1",
     "grunt-autoprefixer": "^3.0.4",
